Pagina de inicio y modal de contacto

--- a/index.html
+++ b/index.html
@@ -8,65 +8,253 @@
 
     <link rel="stylesheet" href="css/materialize.css">
     <link rel="stylesheet" href="css/myStyles.css">
+    <link rel="stylesheet" href="css/material-icons.css">
     <script type="text/javascript" src="js/fontawesome-all.js"></script>
 </head>
 <body>
 
     <ul id="dropdown1" class="dropdown-content">
-        <li><a href="#!">Casas</a></li>
-        <li><a href="#!">Apartamentos</a></li>
+        <li><a href="pages/listado.html">Casas</a></li>
+        <li><a href="pages/listado.html">Apartamentos</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Ver Todos</a></li>
+        <li><a href="pages/listado.html">Ver Todos</a></li>
         <!-- <li><a href="#!">three</a></li> -->
     </ul>
-
-    <nav>
-        <div class="nav-wrapper green accent-6">
-            <div class="container">
-                <a href="#" class="brand-logo " style="margin-left: 20px;">
-                    <img src="images/logo.png" alt="logo" class="responsive-img">
-                    <span class="right" style="margin-left:10px;">EL PORVENIR</span>
-                    <!-- <i class="material-icons">cloud</i>Logo -->
-                </a>
-
-                <a href="#" data-activates="mobile" class="button-collapse">
-                    <i class="fas fa-bars fa-lg"></i>
-                </a>
-
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#!">INICIO</a></li>
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1">
-                        INMUEBLES <i class="fas fa-angle-down"></i>
-                    </a></li>
-                    <li><a href="#!">QUIENES SOMOS</a></li>
-                    <li><a href="#!">CONTÁCTANOS</a></li>
-
-                </ul>
-                <ul class="side-nav" id="mobile">
-                    <li><a href="#!">INICIO</a></li>
-                    <li class="">
-                        <ul class="collapsible collapsible-accordion">
-                            <li>
-                                <a class="collapsible-header">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INMUEBLES <i class="fas fa-angle-down"></i>
-                                </a>
-                                <div class="collapsible-body black-text">
-                                    <ul>
-                                        <li><a href="#!">&nbsp;&nbsp; Casas</a></li>
-                                        <li><a href="#!">&nbsp;&nbsp; Apartamentos</a></li>
-                                        <li><a href="#!">&nbsp;&nbsp; Ver Todos</a></li>
-                                    </ul>
-                                </div>
-                            </li>
+    <ul class="side-nav" id="mobile">
+        <li><a href="#!">INICIO</a></li>
+        <li class="">
+            <ul class="collapsible collapsible-accordion">
+                <li>
+                    <a class="collapsible-header">
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;INMUEBLES <i class="fas fa-angle-down"></i>
+                    </a>
+                    <div class="collapsible-body black-text">
+                        <ul>
+                            <li><a href="pages/listado.html">&nbsp;&nbsp; Casas</a></li>
+                            <li><a href="pages/listado.html">&nbsp;&nbsp; Apartamentos</a></li>
+                            <li><a href="pages/listado.html">&nbsp;&nbsp; Ver Todos</a></li>
                         </ul>
-                    </li>
-                    <li><a href="#!">QUIENES SOMOS</a></li>
-                    <li><a href="#!">CONTÁCTANOS</a></li>
-                </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <li><a href="pages/info.html">QUIENES SOMOS</a></li>
+         <li><a class="modal-trigger" href="#modal-contacto">CONTÁCTANOS</a></li>
+    </ul>
+
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper green accent-6">
+                <div class="container">
+                    <a href="#" class="brand-logo " style="margin-left: 20px;">
+                        <img src="images/logo.png" alt="logo" class="responsive-img">
+                        <span class="right" style="margin-left:10px;">EL PORVENIR</span>
+                        <!-- <i class="material-icons">cloud</i>Logo -->
+                    </a>
+
+                    <a href="#" data-activates="mobile" class="button-collapse">
+                        <i class="fas fa-bars fa-lg"></i>
+                    </a>
+
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#!">INICIO</a></li>
+                        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">
+                            INMUEBLES <i class="fas fa-angle-down"></i>
+                        </a></li>
+                        <li><a href="pages/info.html">QUIENES SOMOS</a></li>
+                         <li><a class="modal-trigger" href="#modal-contacto">CONTÁCTANOS</a></li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+    </div>
+
+    <!-- <div class="espacio-nav"></div> -->
+
+    <div class="slider">
+        <ul class="slides">
+            <li>
+                <img src="images/a1.jpg">
+                <div class="caption left-align">
+                    <h3>Bienvenido a El Porvenir</h3>
+                      <h4 class="light grey-text text-lighten-3" id="min_info">
+                         Inmobiliaria<br><br>
+                      </h4>
+                </div>
+            </li>
+            <li>
+                <img src="images/a4.jpg">
+                <div class="caption center-align">
+                  <h3>Titulo / Title</h3>
+                  <h5 class="light grey-text text-lighten-3">Texto o Informacion</h5>
+                </div>
+            </li>
+            <li>
+                <img src="images/a5.jpg">
+                <div class="caption right-align">
+                    <h3>Titulo / Title</h3>
+                    <h5 class="light grey-text text-lighten-3">Texto o Informacion</h5>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container">
+        <center><h4>Inmuebles mas recientes</h4></center>
+        <div class="card z-depth-3">
+            <div class="card-title grey lighten-3" style="padding:20px;">
+                <div class="row">
+                    <div class="col s12 m4 l4">
+                        <div class="card sticky-action hoverable card-inmueble">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="images/a2.jpg">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">
+                                  <i class="material-icons right">more_vert</i>
+                                 <b> Casa en el Rodadero</b>
+                              </span>
+                             <b>$660.000</b>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4 center-align">
+                                    <i class="material-icons right">close</i>
+
+                                </span>
+                                <br>
+                                Tipo: Casa <br>
+                                Direccion: Cll 01 # 12- 21<br>
+                                Ciudad: Santa Marta, MAG <br>
+                                Cuartos: 4 <br>
+                                Baños: 2 <br>
+                                Precio: $660.000 /Mes <br>
+                            </div>
+                            <div class="card-action center-align">
+                                <a href="" class="btn green">VER INMUEBLE</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4 l4">
+                        <div class="card sticky-action hoverable card-inmueble">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="images/a5.jpg">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">
+                                  <i class="material-icons right">more_vert</i>
+                                 <b> Apartamento en Gaira</b>
+                              </span>
+                             <b>$720.000</b>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4 center-align">
+                                    <i class="material-icons right">close</i>
+
+                                </span>
+                                <br>
+                                Tipo: Apartamento <br>
+                                Direccion: Cll 01 # 12- 21<br>
+                                Ciudad: Santa Marta, MAG <br>
+                                Cuartos: 4 <br>
+                                Baños: 2 <br>
+                                Precio: $620.000 /Mes <br>
+                            </div>
+                            <div class="card-action center-align">
+                                <a href="" class="btn green">VER INMUEBLE</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col s12 m4 l4">
+                        <div class="card sticky-action hoverable card-inmueble">
+                            <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" src="images/a4.jpg">
+                            </div>
+                            <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">
+                                  <i class="material-icons right">more_vert</i>
+                                 <b> Apartamento en Bastidas</b>
+                              </span>
+                             <b>$580.000</b>
+                            </div>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4 center-align">
+                                    <i class="material-icons right">close</i>
+
+                                </span>
+                                <br>
+                                Tipo: Apartamento <br>
+                                Direccion: Cll 01 # 12- 21<br>
+                                Ciudad: Santa Marta, MAG <br>
+                                Cuartos: 4 <br>
+                                Baños: 2 <br>
+                                Precio: $580.000 /Mes <br>
+                            </div>
+                            <div class="card-action center-align">
+                                <a href="" class="btn green">VER INMUEBLE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-action right-align  grey lighten-2">
+                <a href="" class="btn green waves-effect waves-light">Ver todas</a>
             </div>
         </div>
-    </nav>
+        <br>
+        <center><h4>Información sobre nosotros</h4></center>
+        <p class="flow-text">
+            Algo de Informacion. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita mollitia amet enim quam accusantium id illum consequatur architecto, est, doloribus laudantium, nobis! Repellat, error, temporibus. Nesciunt modi blanditiis excepturi deleniti.
+            <br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi aliquam distinctio sed porro laboriosam enim, molestiae unde quidem odit quos ducimus, ad ratione nesciunt repellat maiores quas aliquid voluptatibus, modi?
+        </p>
 
+    </div>
+
+    <br>
+    <footer class="page-footer green accent-6">
+		<div class="container">
+			<div class="row">
+				<div class="col s12 m6">
+					<h5 class="white-text">EL PORVENIR</h5>
+					<p class="grey-text text-lighten-4">Breve informacion. <br>Lorem ipsum dolor sit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, error? </p>
+				</div>
+                <div class="col s12 offset-m1 m5">
+                    <h5 class="white-text">Contácto</h5>
+                    <big>
+                        <span class="white-text">
+                            <i class="fas fa-phone fa-2x"></i> +57 3012344567 <br>
+                            <i class="far fa-envelope fa-2x"></i> correo@elporvenir.com <br>
+                            <i class="fab fa-instagram fa-2x"></i> @el_porvenir
+                        </span>
+                    </big>
+                </div>
+			</div>
+		</div>
+		<div class="footer-copyright">
+			<div class="container center-align">
+				Todos los derechos reservados © 2018 Copyright
+			</div>
+		</div>
+	</footer>
+
+    <div id="modal-contacto" class="modal">
+        <div class="modal-content">
+            <h5>Información de Contácto</h5>
+            <big>
+                <div style="padding-left:20px; line-height:3;">
+                    <i class="fas fa-phone fa-2x"></i> +57 3012344567 <br>
+                    <i class="far fa-envelope fa-2x"></i> correo@elporvenir.com <br>
+                    <i class="fab fa-instagram fa-2x"></i> @el_porvenir
+                </div>
+            </big>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
+        </div>
+    </div>
 
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.js"></script>
