Vista de inmuebles

--- a/index.html
+++ b/index.html
@@ -129,10 +129,12 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si <br>
+                                Servicio: Arriendo <br>
                                 Precio: $660.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="pages/vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
@@ -160,10 +162,12 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si <br>
+                                Servicio: Arriendo <br>
                                 Precio: $620.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="pages/vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
@@ -191,17 +195,19 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si <br>
+                                Servicio: Arriendo <br>
                                 Precio: $580.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="pages/vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="card-action right-align  grey lighten-2">
-                <a href="" class="btn green waves-effect waves-light">Ver todas</a>
+                <a href="pages/listado.html" class="btn green waves-effect waves-light">Ver todas</a>
             </div>
         </div>
         <br>
