--- a/pages/listado.html
+++ b/pages/listado.html
@@ -100,10 +100,12 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si <br>
+                                Servicio: Arriendo <br>
                                 Precio: $660.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
@@ -134,7 +136,7 @@
                                 Precio: $620.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
@@ -164,10 +166,12 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si     br
+                                Servicio: Arriendo     br
                                 Precio: $580.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
@@ -195,10 +199,12 @@
                                 Ciudad: Santa Marta, MAG <br>
                                 Cuartos: 4 <br>
                                 Baños: 2 <br>
+                                Amoblado: Si     br
+                                Servicio: Arriendo     br
                                 Precio: $580.000 /Mes <br>
                             </div>
                             <div class="card-action center-align">
-                                <a href="" class="btn green">VER INMUEBLE</a>
+                                <a href="vista-inmueble.html" class="btn green">VER INMUEBLE</a>
                             </div>
                         </div>
                     </div>
