Cambios minimos a laVista de inmuebles

--- a/pages/vista-inmueble.html
+++ b/pages/vista-inmueble.html
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col s12 m8">
                 <div class="carousel carousel-slider">
-                    <a class="carousel-item" href="#one!"><img class="materialboxed responsive-img" src="../images/a1.jpg"></a>
+                    <a class="carousel-item" href="#one!"><img  src="../images/a1.jpg"></a>
                     <a class="carousel-item" href="#two!"><img src="../images/a2.jpg"></a>
                     <a class="carousel-item" href="#three!"><img src="../images/a3.jpg"></a>
                     <a class="carousel-item" href="#four!"><img src="../images/a4.jpg"></a>
@@ -104,7 +104,9 @@
                         <b>Precio:</b> $660.000 al mes<br>
 
                     </big>
-
+                    <br>
+                    <center><a href="tel:+573012345678" class="btn green">
+                      llamar  <i class="fas fa-phone"></i></a></center>
                 </div>
             </div>
         </div>
