--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
     <div class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper green accent-6">
+            <div class="nav-wrapper bg-color-a">
                 <div class="container">
                     <a href="#" class="brand-logo " style="margin-left: 20px;">
-                        <img src="images/logo.png" alt="logo" class="responsive-img">
-                        <span class="right hide-on-small-only" style="margin-left:10px;">EL PORVENIR</span>
+                        <img src="images/logotipo2.png" alt="logo" class="responsive-img">
+                        <!-- <span class="right hide-on-small-only color-c" style="margin-left:10px;">EL PORVENIR</span> -->
                         <!-- <i class="material-icons">cloud</i>Logo -->
                     </a>
 
@@ -220,7 +220,7 @@
     </div>
 
     <br>
-    <footer class="page-footer green accent-6">
+    <footer class="page-footer bg-color-a">
 		<div class="container">
 			<div class="row">
 				<div class="col s12 m6">
