Adicion y mejoras de filtros de busqueda

--- a/index.html
+++ b/index.html
@@ -102,9 +102,52 @@
     </div>
 
     <div class="container">
-        <center><h4>Inmuebles mas recientes</h4></center>
+        <div class="card-panel tb-p-1 grey lighten-2 z-depth-3 b-p-5">
+            <center><b>¿Que estas buscando?</b></center>
+            <div class="row">
+                <div class="input-field col s12 m4 l3">
+                    <select>
+                        <option value="" disabled selected>Departamento</option>
+                        <option value="1">Magdalena</option>
+                        <!-- <option value="2">Cienaga</<optio></optio>n> -->
+                        <option value="3">Otra</option>
+                    </select>
+                </div>
+                <div class="input-field col s12 m4 l3">
+                    <select>
+                        <option value="" disabled selected>Ciudad</option>
+                        <option value="1">Santa Marta</option>
+                        <option value="2">Cienaga</option>
+                        <option value="3">Otra</option>
+                    </select>
+                </div>
+                <div class="input-field col s12 m4 l2">
+                    <select>
+                        <option value="" disabled selected>Tipo</option>
+                        <option value="1">Apartamento</option>
+                        <option value="2">Casa</option>
+                        <option value="3">Otro</option>
+                    </select>
+                </div>
+                <div class="input-field col s12 m4 l2">
+                    <select>
+                        <option value="" disabled selected>Servicio</option>
+                        <option value="1">Venta</option>
+                        <option value="2">Arriendo</option>
+                        <option value="3">Otro</option>
+                    </select>
+                </div>
+                <div class="col s12 m4 l2"><br>
+                    <div class="center">
+                        <a class="btn b-m-10" href="pages/listado.html"><i class="fas fa-search"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="card z-depth-3">
-            <div class="card-title grey lighten-3" style="padding:20px;">
+            <div class="card-title grey lighten-3 tb-p-10" style="padding:20px;">
+                <center><h4>Inmuebles destacados <i class="fas fa-star amber-text"></i></h4></center>
                 <div class="row">
                     <div class="col s12 m4 l4">
                         <div class="card sticky-action hoverable card-inmueble">
