Cambio logotipo en barra de navegacion

--- a/pages/listado.html
+++ b/pages/listado.html
@@ -48,7 +48,7 @@
                 <div class="container">
                     <a href="#" class="brand-logo" style="margin-left: 20px;">
                         <img src="../images/logotipo2.png" alt="logo" class="responsive-img">
-                        <!-- <span class="right hide-on-small-only" style="margin-left:10px;">EL PORVENIR</span> -->
+                        <span class="right hide-on-small-only color-c" style="margin-left:10px;"><b>EL PORVENIR</b></span>
                         <!-- <i class="material-icons">cloud</i>Logo -->
                     </a>
 
